--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: fishmethods
-Version: 1.3-0
-Date: 2012-3-26
+Version: 1.4-0
+Date: 2013-01-15
 Title: Fisheries Methods and Models in R
 Author: Gary A. Nelson <gary.nelson@state.ma.us>
 Maintainer: Gary A. Nelson <gary.nelson@state.ma.us>
-Depends: R (>= 2.14.2), boot, stats, foreign
-Description: Fishery methods and models from Quinn and Deriso (1999),
-        Haddon(2001) , and literature.
+Depends: R (>= 2.15.2), boot, stats, foreign
+Description: Fishery methods and models from literature and fisheries
+        scientists.
 License: GPL (>= 2)
-Packaged: 2012-03-27 13:11:49 UTC; gnelson
+Packaged: 2013-01-15 19:32:10 UTC; gnelson
 Repository: CRAN
-Date/Publication: 2012-03-27 14:00:18
+Date/Publication: 2013-01-15 21:52:54
