--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: fishmethods
-Version: 1.5-0
-Date: 2013-07-12
+Version: 1.6-0
+Date: 2014-03-07
 Title: Fishery Science Methods and Models in R
 Author: Gary A. Nelson <gary.nelson@state.ma.us>
 Maintainer: Gary A. Nelson <gary.nelson@state.ma.us>
-Depends: R (>= 3.0.1), boot, stats, foreign, MASS
+Depends: R (>= 3.0.1),MASS, boot, bootstrap
 Description: Fishery science methods and models from literature and colleague contributions
 License: GPL (>= 2)
-Packaged: 2013-07-12 16:36:52 UTC; gnelson
+Packaged: 2014-03-10 12:19:33 UTC; gnelson
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-07-12 22:47:17
+Date/Publication: 2014-03-10 17:23:25
