--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: fishmethods
-Version: 1.7-0
-Date: 2014-11-05
+Version: 1.8-0
+Date: 2015-5-27
 Title: Fishery Science Methods and Models in R
 Author: Gary A. Nelson <gary.nelson@state.ma.us>
 Maintainer: Gary A. Nelson <gary.nelson@state.ma.us>
-Depends: R (>= 3.0.1),MASS, boot, bootstrap
-Description: Fishery science methods and models from literature and colleague contributions
+Depends: R (>= 3.2.0),MASS, boot, bootstrap
+Description: Fishery science methods and models from published literature and contributions from colleagues.
 License: GPL (>= 2)
-Packaged: 2014-11-17 19:34:16 UTC; gnelson
 NeedsCompilation: no
+Packaged: 2015-05-27 17:58:24 UTC; gnelson
 Repository: CRAN
-Date/Publication: 2014-11-18 15:26:12
+Date/Publication: 2015-05-28 08:00:18
