--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,18 @@
 import(boot)
 import(bootstrap)
 import(MASS)
+importFrom("lme4","glmer")
+importFrom("grDevices", "dev.off", "rgb", "tiff")
+importFrom("graphics", "abline", "arrows", "axis", "barplot", "box",
+             "curve", "hist", "lines", "matplot", "par", "plot",
+             "points", "text")
+importFrom("stats", "acf", "aggregate", "anova", "aov", "arima",
+             "bartlett.test", "coef", "cov2cor", "dlogis", "dnorm", "dt",
+             "integrate", "lm", "median", "nls", "optim", "optimize",
+             "pchisq", "pf", "plogis", "pnorm", "poisson", "predict",
+             "pt", "qbinom", "qhyper", "qnorm", "qpois", "qt",
+             "quantile", "rbinom", "residuals", "rexp", "rlnorm",
+             "rmultinom", "rnorm", "runif", "sd", "ts", "var")
+importFrom("utils", "read.csv", "stack", "write.table")
+
 exportPattern("^[[:alpha:]]+")
